--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,14 @@ backcall==0.1.0
 backports.weakref==1.0.post1
 bleach==3.1.0
 certifi==2019.3.9
+cffi==1.12.2
 cloudpickle==0.8.0
 cycler==0.10.0
 cytoolz==0.9.0.1
 dask==1.1.4
 decorator==4.4.0
 defusedxml==0.5.0
+dlib==19.17.0
 entrypoints==0.3
 gast==0.2.2
 grpcio==1.16.0
@@ -25,10 +27,13 @@ ipython-genutils==0.2.0
 jedi==0.13.3
 Jinja2==2.10
 jsonschema==3.0.1
+jupyter-client==5.2.4
+jupyter-core==4.4.0
 kiwisolver==1.0.1
 Mako==1.0.7
 Markdown==2.6.11
 MarkupSafe==1.1.1
+matplotlib==3.0.3
 mistune==0.8.4
 mock==2.0.0
 nbconvert==5.4.1
@@ -37,6 +42,7 @@ networkx==2.2
 notebook==5.7.6
 numpy==1.15.2
 olefile==0.46
+opencv-python==4.0.0.21
 pandas==0.24.2
 pandocfilters==1.4.2
 parso==0.3.4
@@ -49,6 +55,7 @@ prompt-toolkit==2.0.9
 protobuf==3.7.0
 psycopg2==2.7.7
 ptyprocess==0.6.0
+pycparser==2.19
 Pygments==2.3.1
 pyparsing==2.3.1
 pyrsistent==0.14.11
@@ -69,6 +76,7 @@ termcolor==1.1.0
 terminado==0.8.1
 testpath==0.4.2
 toolz==0.9.0
+tornado==6.0.1
 traitlets==4.3.2
 wcwidth==0.1.7
 webencodings==0.5.1
